test/sema/typeck/module/use-super-err.out
error: no super module.
--> use-super-err.dora:1:5
 | use super::Foo;
       ~~~~~
 | 
1 error found.
